--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"@contentful/rich-text-react-renderer": "^13.4.0",
 		"gatsby": "^2.18.12",
 		"gatsby-plugin-manifest": "^2.2.41",
+		"gatsby-plugin-nprogress": "^2.1.19",
 		"gatsby-plugin-offline": "^3.0.35",
 		"gatsby-plugin-react-helmet": "^3.1.18",
 		"gatsby-plugin-sass": "^2.1.26",
@@ -33,7 +34,7 @@
 		"react-helmet": "^5.2.1",
 		"react-typography": "^0.16.19",
 		"typography": "^0.16.19",
-		"typography-theme-kirkham": "^0.16.19"
+		"typography-theme-noriega": "^0.16.19"
 	},
 	"devDependencies": {
 		"env-cmd": "^10.0.1",
