--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"version": "0.1.0",
 	"license": "MIT",
 	"scripts": {
-		"build": "gatsby build",
+		"build": "env-cmd gatsby build",
 		"develop": "env-cmd -f .env gatsby develop",
 		"format": "prettier --write \"**/*.{js,jsx,json,md}\"",
 		"start": "npm run develop",
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@contentful/rich-text-react-renderer": "^13.4.0",
 		"gatsby": "^2.18.12",
+		"gatsby-plugin-feed": "^2.3.27",
 		"gatsby-plugin-manifest": "^2.2.41",
 		"gatsby-plugin-nprogress": "^2.1.19",
 		"gatsby-plugin-offline": "^3.0.35",
