--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
 		"react-helmet": "^5.2.1",
+		"react-hook-form": "^4.9.8",
 		"react-typography": "^0.16.19",
 		"typography": "^0.16.19",
 		"typography-theme-noriega": "^0.16.19"
