--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"node-sass": "^4.13.0",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-google-recaptcha": "^2.0.1",
 		"react-helmet": "^5.2.1",
 		"react-hook-form": "^4.9.8",
 		"react-typography": "^0.16.19",
